[gd_scene load_steps=8 format=3 uid="uid://bn1qhsv4kwutj"]

[ext_resource type="Script" path="res://scripts/player_script.gd" id="1_dc5nm"]
[ext_resource type="Texture2D" uid="uid://dia138jsdow3o" path="res://art/playerGrey_up1.png" id="2_vsaro"]
[ext_resource type="Texture2D" uid="uid://clxk741bh6hy7" path="res://art/playerGrey_up2.png" id="3_m5c5f"]
[ext_resource type="Texture2D" uid="uid://c6hj040eklogb" path="res://art/playerGrey_walk1.png" id="4_1b2ww"]
[ext_resource type="Texture2D" uid="uid://buad5whjlsndv" path="res://art/playerGrey_walk2.png" id="5_quekc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gkq6k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vsaro")
}, {
"duration": 1.0,
"texture": ExtResource("3_m5c5f")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_1b2ww")
}, {
"duration": 1.0,
"texture": ExtResource("5_quekc")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lpl2k"]
radius = 25.0
height = 50.0

[node name="Player" type="Area2D"]
script = ExtResource("1_dc5nm")
metadata/_edit_group_ = true

[node name="PlayerAnimations" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_gkq6k")
animation = &"up"

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_lpl2k")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
